# mcpelauncher-client

./: .clang-format  CMakeLists.txt  CPackSettings.cmake  lib_http_client.cpp
.github/workflows/: ci.yml
src/: armhf_support.cpp  armhf_support.h  armhfrewrite.h  build_info.h.in  client_app_platform.cpp  client_app_platform.h  cll_upload_auth_step.cpp  cll_upload_auth_step.h  core_patches.cpp  core_patches.h  cpuid.cpp  cpuid.h  fake_assetmanager.cpp  fake_assetmanager.h  fake_egl.cpp  fake_egl.h  fake_inputqueue.cpp  fake_inputqueue.h  fake_looper.cpp  fake_looper.h  fake_window.cpp  fake_window.h  gl_core_patch.cpp  gl_core_patch.h  glad.c  hbui_patch.cpp  hbui_patch.h  http_request_stub.cpp  http_request_stub.h  imgui_ui.cpp  imgui_ui.h  main.cpp  main.h  minecraft_game_wrapper.cpp  minecraft_game_wrapper.h  minecraft_gamepad_mapping.h  msa_remote_login.cpp  msa_remote_login.h  msa_remote_login_task.cpp  msa_remote_login_task.h  (+57 more)
src/GLES2/: gl2.h
src/glad/: glad.h
src/jni/: accounts.cpp  accounts.h  arrays.cpp  arrays.h  cert_manager.cpp  cert_manager.h  ecdsa.cpp  ecdsa.h  http_stub.cpp  http_stub.h  java_types.cpp  java_types.h  jbase64.cpp  jbase64.h  jni_descriptors.cpp  jni_support.cpp  jni_support.h  lib_http_client.cpp  lib_http_client.h  lib_http_client_websocket.cpp  lib_http_client_websocket.h  locale.cpp  locale.h  main_activity.cpp  main_activity.h  package_source.cpp  package_source.h  pulseaudio.cpp  pulseaudio.h  sdl3audio.cpp  sdl3audio.h  securerandom.cpp  securerandom.h  shahasher.cpp  shahasher.h  signature.cpp  signature.h  store.cpp  store.h  uuid.cpp  (+5 more)
src/legacy/: legacy_patches.cpp  legacy_patches.h  minecraft_game_wrapper_legacy.h  xbox_live_game_interface_legacy_0_15_2.cpp  xbox_live_game_interface_legacy_0_15_2.h  xbox_live_game_interface_legacy_1_2.cpp  xbox_live_game_interface_legacy_1_2.h  xbox_live_game_interface_legacy_1_2_3.cpp  xbox_live_game_interface_legacy_1_2_3.h  xbox_live_game_interface_legacy_1_4.cpp  xbox_live_game_interface_legacy_1_4.h
